--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Aygun Azadova PhD</a>
+    <a class="navbar-brand" href="index.html">Farid Adilov</a>
 
     <!-- Hamburger button for mobile -->
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
